--- a/assets/index/Dialog.less
+++ b/assets/index/Dialog.less
@@ -71,7 +71,7 @@
 
   &-footer {
     border-top: 1px solid #e9e9e9;
-    padding: 10px 20px 10px 10px;
+    padding: 10px 20px;
     text-align: right;
     border-radius: 0 0 5px 5px;
   }
